# openECOE-API

./: .code2pdf  .flake8  .gitignore  .gitmodules  Alarma.py  Alumno.py  Area.py  CONTRIBUTING.md  Cronometro.py  Dia.py  Dockerfile  ECOE.py  Estacion.py  Grupo.py  LICENSE  Makefile  Opcion.py  Organizacion.py  OrganizacionUsuario.py  Permiso.py  Pregunta.py  Preguntas.py  README.md  Rueda.py  Turno.py  Usuario.py  Vagrantfile  api.py  config.py  creacion_tablas.py  create_tables.py  db.py  delete_tables.py  docker-compose.DB.yml  docker-compose.yml  eliminacion_tablas.py  inicio.py  login.py  logs.json  main.py  (+11 more)
.devcontainer/: Dockerfile  devcontainer.json
.docker/: build.sh  docker-compose.persistence.yml  docker-compose.prod.yml  prod.dockerfile
.docker/deploy/: alembic.sh  api.conf  debug.sh  first-run.sh  gunicorn.sh  local.env
.github/workflows/: dev-uat-pr.yml  docker-publish.yml  openecoe-api.yml
.trunk/: actions  notifications  trunk.yaml
Vagrant/: script.sh
api/: __init__.py  area.py  auth.py  chronometer.py  organization.py  round.py  station.py  tokens.py  user.py
app/: __init__.py
app/api/: __init__.py  _mainresource.py  alarm.py  answer.py  area.py  auth.py  chronometer.py  day.py  ecoe.py  errors.py  event.py  export.py  group.py  jobs.py  option.py  organization.py  permission.py  planner.py  qblock.py  question.py  report_templates.py  round.py  schedule.py  shift.py  stage.py  station.py  statistics.py  student.py  tokens.py  user.py  wheel.py
app/auth/: __init__.py  auth.py  login.py  tokens.py
app/chrono/: __init__.py  classes.py  routes.py
app/jobs/: __init__.py  _job.py  ecoe.py  statistics.py
app/model/: Alarm.py  Answer.py  Area.py  Chronometer.py  Day.py  ECOE.py  Event.py  Group.py  Job.py  Option.py  Organization.py  Permission.py  Planner.py  QBlock.py  Question.py  ReportTemplate.py  Round.py  Schedule.py  Shift.py  Stage.py  Station.py  Student.py  Turn.py  User.py  Wheel.py  __init__.py  many_to_many_tables.py
app/shared/: __init__.py  utils.py
app/statistics/: Csv.py  Functions.py  ItemScore.py  Resultados.py  ResultsForArea.py  ResultsReport.py  __init__.py  calculations.py  export_ecoe.py  export_planners.py  import_planners.py  variables.py
app/status/: __init__.py
chrono/: __init__.py  classes.py  routes.py
chrono/templates/: admin.html  index.html
configs/: __init__.py  gunicorn_conf.py
deploy/: alembic.sh  ansible_vault.pass  api.conf  gunicorn.sh  requeriments.yml  setup.yml  setup_api.yml
deploy/group_vars/: all.yml
deploy/host_vars/: api.openecoe.com  dev.api.openecoe.com  openecoe.com  staging.openecoe.com  test.api.openecoe.com  vagrant
deploy/inventory/: develop  production  staging  test  vagrant
environments/: dev.env  test.env
migrations/: env.py  test_migrations.py
migrations/versions/: 01942fd243cf_.py  06095f669426_.py  0c804508a5f5_.py  (+50 more)
model/: Alarm.py  Alarma.py  Alumno.py  Answer.py  Area.py  Chronometer.py  Cronometro.py  Day.py  Dia.py  ECOE.py  ECOEChro.py  Estacion.py  Group.py  Grupo.py  Opcion.py  Option.py  Organizacion.py  Organization.py  Orguser.py  Permiso.py  Permission.py  Pregunta.py  Question.py  Round.py  Rueda.py  Shift.py  Stachro.py  Station.py  Student.py  Turno.py  User.py  Userperm.py  Usuario.py  __init__.py
template/: results-report.html  styles.css
tests/: __init__.py  conftest.py  setup.cfg  tests.py
vars/: main.yml
ws/: __init__.py  alarm.py  alarma.py  alumno.py  answer.py  area.py  chronometer.py  creacion_tablas.py  cronometro.py  day.py  dia.py  ecoe.py  eliminacion_tablas.py  estacion.py  group.py  grupo.py  inicio.py  opcion.py  option.py  organizacion.py  organization.py  permiso.py  permission.py  pregunta.py  question.py  round.py  rueda.py  shift.py  station.py  student.py  turno.py  user.py  usuario.py
(+67 files in other folders)
