[tool.poetry]
name = "openecoe-api"
version = "0.1.0"
description = ""
authors = ["Alberto Moreno <amoreno@umh.es>"]
readme = "README.md"
packages = [{include = "openecoe_api"}]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "1.8.1"
flask = "1.0.3"
flask-bcrypt = "0.7.1"
flask-cors = "3.0.9"
flask-httpauth = "3.2.3"
flask-jwt = "0.3.2"
flask-login = "0.4.1"
flask-migrate = "2.7.0"
flask-potion = "0.16.0"
flask-principal = "0.4.0"
flask-rest = "1.3"
flask-restful = "0.3.6"
flask-script = "2.0.6"
flask-sqlalchemy = "2.5"
python-dotenv = "0.10.5"
pytest = "^7.2.2"
pytest-flask = "^1.2.0"
pytest-flask-sqlalchemy = "^1.1.0"
pyexcel = "0.5.15"
flask-excel = "0.0.7"
pyexcel-xls = "0.5.8"
pyexcel-xlsx = "0.5.8"
pyexcel-ods = "0.5.6"
flask-rq2 = "18.3"
pandas = "1.4.4"
pdfkit = "1.0.0"
flask-cli = "0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
