[tool.poetry]
name = "openecoe-api"
version = "0.1.0"
description = ""
authors = ["Alberto Moreno <amoreno@umh.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
alembic = "1.8.1"
flask = "1.0.3"
flask-bcrypt = "0.7.1"
flask-cors = "3.0.9"
flask-httpauth = "3.2.3"
flask-jwt = "0.3.2"
flask-login = "0.4.1"
flask-migrate = "2.7.0"
flask-potion = "^0.16.0"
flask-principal = "0.4.0"
flask-rest = "1.3"
flask-restful = "0.3.6"
flask-script = "2.0.6"
flask-sqlalchemy = "2.3.2"
python-dotenv = "0.10.5"
pytest = "^7.2.2"
pytest-flask = "^1.2.0"
pytest-flask-sqlalchemy = "^1.1.0"
pyexcel = "0.5.15"
flask-excel = "0.0.7"
pyexcel-xls = "0.5.8"
pyexcel-xlsx = "0.5.8"
pyexcel-ods = "0.5.6"
flask-rq2 = "18.3"
pandas = "1.4.4"
pdfkit = "1.0.0"
flask-cli = "0.4.0"
strict-rfc3339 = "0.7"
jinja2 = "2.11.3"
aniso8601 = "3.0.0"
bcrypt = "3.1.4"
blinker = "1.4"
certifi = "2021.10.8"
cffi = "1.15.0"
chardet = "3.0.4"
click = "6.7"
cryptography = "37.0.2"
idna = "2.8"
itsdangerous = "0.24"
jsonschema = "2.6.0"
mako = "1.0.7"
markupsafe = "1.1.1"
pycparser = "2.18"
pyjwt = "1.4.2"
pymysql = "1.0.2"
python-dateutil = "2.8.1"
python-editor = "1.0.3"
pytz = "2020.1"
rfc3987 = "1.3.7"
six = "1.11.0"
sqlalchemy = "1.3.15"
urllib3 = "1.24.3"
werkzeug = "1.0.1"
rq = "1.3.0"
flake8 = "4.0.1"
gunicorn = "^20.1.0"


[tool.poetry.group.chrono.dependencies]
dnspython = "1.16.0"
flask-socketio = "3.0.0"
eventlet = "0.25.0"
enum34 = "1.1.6"
monotonic = "1.5"
python-engineio = "2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
